--- a/tgui/packages/tgui-panel/styles/tgchat/chat-dark.scss
+++ b/tgui/packages/tgui-panel/styles/tgchat/chat-dark.scss
@@ -1267,3 +1267,14 @@ $border-width-px: $border-width * 1px;
     );
   }
 }
+
+/* DARKPACK EDIT ADD START */
+
+.looc {
+  color: #d8b555;
+}
+.rlooc {
+  color: #b09448;
+}
+
+/* DARKPACK EDIT ADD END */
