--- a/tgui/packages/tgui-panel/styles/tgchat/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/tgchat/chat-light.scss
@@ -1248,3 +1248,16 @@ $border-width-px: $border-width * 1px;
     );
   }
 }
+
+/* DARKPACK EDIT ADD START */
+
+.looc {
+  color: #6699cc;
+  font-weight: bold;
+}
+.rlooc {
+  color: #507294;
+  font-weight: bold;
+}
+
+/* DARKPACK EDIT ADD END */
