--- a/tgui/packages/tgui-say/styles/colors.scss
+++ b/tgui/packages/tgui-say/styles/colors.scss
@@ -16,6 +16,9 @@ $_channel_map: (
   'Engi': hsl(17, 87.8%, 61.4%),
   'Hive': hsl(300, 17.7%, 44.3%),
   'io': hsl(209.6, 100%, 55.9%),
+  // DARKPAK EDIT ADD START
+  'LOOC': hsl(20, 100%, 86%),
+  // DARKPACK EDIT ADD END
   'Me': hsl(227, 63.5%, 60.2%),
   'Med': hsl(202, 83.6%, 64.1%),
   'OOC': hsl(47.9, 100%, 40%),
